[tool.poetry]
name = "shreqt"
version = "0.2.3"
description = ""
authors = ["Zibi Rzepka <zibi.rzepka@revolut.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
sqlalchemy-exasol = "^2.0"
pyexasol = "^0.6.4"
sqlparse = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "19.3b0"

[tool.black]
line-length = 99
target_version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

