[tool.poetry]
name = "shreqt"
version = "0.5.1"
description = "Query Testing framework"
authors = ["Zibi Rzepka <zibi.rzepka@revolut.com>"]

readme = "README.md"
keywords = ["testing", "query", "exasol"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
sqlalchemy-exasol = "^2.0"
pyexasol = "=0.9.1"
sqlparse = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "^19.3b0"
pytest-cov = "^2.7"
flake8 = "^3.7"
safety = "^1.8"
codecov = "^2.0"

[tool.black]
line-length = 99
target_version = ["py36", "py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
